results/SpecGenBench/conversational/log-DigitRoot-2023_08_13_02_37_20.txt
class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        //@ maintaining num >= 10 ==> num >= 0;
        //@ maintaining num < 10 ==> num >= 0 && num < 10;
        //@ decreases num;
        while (num >= 10) {
            int sum = 0;
            //@ maintaining num > 0 ==> num >= 0;
            //@ maintaining num == 0 ==> num == 0;
            //@ decreases num;
            while (num > 0) {
                sum += num % 10;
                num /= 10;
            }
            num = sum;
        }
        return num;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:7: verify: The prover cannot establish an assertion (LoopDecreases) in method digitRoot
        //@ decreases num;
            ^
1 verification failure

class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        //@ maintaining num >= 10 ==> num >= 0;
        //@ maintaining num < 10 ==> num >= 0 && num < 10;
        //@ decreases num;
        while (num >= 10) {
            int sum = 0;
            //@ maintaining num > 0 ==> num >= 0;
            //@ maintaining num == 0 ==> num == 0;
            //@ decreases num;
            int temp = num;
            while (temp > 0) {
                sum += temp % 10;
                temp /= 10;
            }
            num = sum;
        }
        return num;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:13: error: variable declaration not allowed here
            int temp = num;
                ^
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:10: error: Loop specifications must immediately precede a loop statement
            //@ maintaining num > 0 ==> num >= 0;
                ^
2 errors

class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        //@ maintaining num >= 10 ==> num >= 0;
        //@ maintaining num < 10 ==> num >= 0 && num < 10;
        //@ decreases num;
        while (num >= 10) {
            int sum = 0;
            int temp = num;
            //@ maintaining temp > 0 ==> temp >= 0;
            //@ maintaining temp == 0 ==> temp == 0;
            //@ decreases temp;
            while (temp > 0) {
                sum += temp % 10;
                temp /= 10;
            }
            num = sum;
        }
        return num;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:7: verify: The prover cannot establish an assertion (LoopDecreases) in method digitRoot
        //@ decreases num;
            ^
1 verification failure

class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        //@ maintaining num >= 10 ==> num >= 0;
        //@ maintaining num < 10 ==> num >= 0 && num < 10;
        //@ decreases num;
        int temp = num;
        while (temp >= 10) {
            int sum = 0;
            //@ maintaining temp > 0 ==> temp >= 0;
            //@ maintaining temp == 0 ==> temp == 0;
            //@ decreases temp;
            while (temp > 0) {
                sum += temp % 10;
                temp /= 10;
            }
            temp = sum;
        }
        return temp;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:8: error: variable declaration not allowed here
        int temp = num;
            ^
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:5: error: Loop specifications must immediately precede a loop statement
        //@ maintaining num >= 10 ==> num >= 0;
            ^
2 errors

class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        int temp = num;
        //@ maintaining temp >= 10 ==> temp >= 0;
        //@ maintaining temp < 10 ==> temp >= 0 && temp < 10;
        //@ decreases temp;
        while (temp >= 10) {
            int sum = 0;
            //@ maintaining temp > 0 ==> temp >= 0;
            //@ maintaining temp == 0 ==> temp == 0;
            //@ decreases temp;
            int temp2 = temp;
            while (temp2 > 0) {
                sum += temp2 % 10;
                temp2 /= 10;
            }
            temp = sum;
        }
        return temp;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:14: error: variable declaration not allowed here
            int temp2 = temp;
                ^
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:11: error: Loop specifications must immediately precede a loop statement
            //@ maintaining temp > 0 ==> temp >= 0;
                ^
2 errors

class DigitRoot {
    //@ requires num >= 0;
    //@ ensures \result >= 0 && \result < 10;
    public int digitRoot(int num) {
        int temp = num;
        //@ maintaining temp >= 10 ==> temp >= 0;
        //@ maintaining temp < 10 ==> temp >= 0 && temp < 10;
        //@ decreases temp;
        while (temp >= 10) {
            int sum = 0;
            int temp2 = temp;
            //@ maintaining temp2 > 0 ==> temp2 >= 0;
            //@ maintaining temp2 == 0 ==> temp2 == 0;
            //@ decreases temp2;
            while (temp2 > 0) {
                sum += temp2 % 10;
                temp2 /= 10;
            }
            temp = sum;
        }
        return temp;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitalRoot.java:8: verify: The prover cannot establish an assertion (LoopDecreases) in method digitRoot
        //@ decreases temp;
            ^
1 verification failure

